[WK2] FindController should not assume that ports do not want to highlight text matches https://bugs.webkit.org/show_bug.cgi?id=76921

Reviewed by Darin Adler.

FindController must obey the FindOptionsShowHighlight flag instead
of assuming that ports do not want to highlight search matches.

* Shared/API/c/WKFindOptions.h: added kWKFindOptionsShowHighlight.
* Shared/API/c/WKSharedAPICast.h:
(WebKit::toFindOptions): Ditto.
* Shared/WebFindOptions.h: added FindOptionsShowHighlight.
* WebProcess/WebPage/FindController.cpp:
(WebKit::FindController::findString):

Canonical link: https://commits.webkit.org/93858@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@105855 268f45cc-cd09-0410-ab3c-d52691b4dbfc